--- a/src/catalog_view_form.ui
+++ b/src/catalog_view_form.ui
@@ -17,6 +17,16 @@
    <locale language="English" country="UnitedStates"/>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="1" column="0" colspan="4">
+    <widget class="QTableWidget" name="tableWidget"/>
+   </item>
+   <item row="0" column="2">
+    <widget class="QPushButton" name="pushButton_showDatasheet">
+     <property name="text">
+      <string>Show Datasheet</string>
+     </property>
+    </widget>
+   </item>
    <item row="0" column="0">
     <widget class="QComboBox" name="comboBox_Supplyer"/>
    </item>
@@ -32,9 +42,6 @@
       </size>
      </property>
     </spacer>
-   </item>
-   <item row="1" column="0" colspan="2">
-    <widget class="QTableWidget" name="tableWidget"/>
    </item>
   </layout>
  </widget>
