--- a/src/glass_datasheet_form.ui
+++ b/src/glass_datasheet_form.ui
@@ -156,6 +156,30 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="tab_Transmittance">
+      <attribute name="title">
+       <string>Transmittance</string>
+      </attribute>
+      <layout class="QGridLayout" name="gridLayout_7">
+       <item row="0" column="0">
+        <widget class="QScrollArea" name="scrollArea_Transmittance">
+         <property name="widgetResizable">
+          <bool>true</bool>
+         </property>
+         <widget class="QWidget" name="scrollAreaWidgetContents_Transmittance">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>537</width>
+            <height>423</height>
+           </rect>
+          </property>
+         </widget>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </item>
   </layout>
