--- a/src/dispersion_plot_form.ui
+++ b/src/dispersion_plot_form.ui
@@ -356,7 +356,7 @@
   <customwidget>
    <class>QCustomPlot</class>
    <extends>QWidget</extends>
-   <header>qcustomplot.h</header>
+   <header>QCustomPlot/qcustomplot.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
