--- a/src/transmittance_plot_form.ui
+++ b/src/transmittance_plot_form.ui
@@ -226,7 +226,7 @@
   <customwidget>
    <class>QCustomPlot</class>
    <extends>QWidget</extends>
-   <header>qcustomplot.h</header>
+   <header>QCustomPlot/qcustomplot.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
