add catalog view setting

--- a/src/glass_datasheet_form.ui
+++ b/src/glass_datasheet_form.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>609</width>
-    <height>536</height>
+    <width>734</width>
+    <height>562</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -34,7 +34,7 @@
    <item row="1" column="0" colspan="2">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>6</number>
      </property>
      <widget class="QWidget" name="tab_Basic">
       <attribute name="title">
@@ -51,8 +51,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>537</width>
-            <height>423</height>
+            <width>662</width>
+            <height>449</height>
            </rect>
           </property>
          </widget>
@@ -75,8 +75,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>537</width>
-            <height>423</height>
+            <width>662</width>
+            <height>449</height>
            </rect>
           </property>
          </widget>
@@ -99,8 +99,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>537</width>
-            <height>423</height>
+            <width>662</width>
+            <height>449</height>
            </rect>
           </property>
          </widget>
@@ -123,8 +123,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>537</width>
-            <height>423</height>
+            <width>662</width>
+            <height>449</height>
            </rect>
           </property>
          </widget>
@@ -147,8 +147,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>537</width>
-            <height>423</height>
+            <width>662</width>
+            <height>449</height>
            </rect>
           </property>
          </widget>
@@ -171,8 +171,32 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>537</width>
-            <height>423</height>
+            <width>662</width>
+            <height>449</height>
+           </rect>
+          </property>
+         </widget>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_OtherData">
+      <attribute name="title">
+       <string>Other Data</string>
+      </attribute>
+      <layout class="QGridLayout" name="gridLayout_8">
+       <item row="0" column="0">
+        <widget class="QScrollArea" name="scrollArea_OtherData">
+         <property name="widgetResizable">
+          <bool>true</bool>
+         </property>
+         <widget class="QWidget" name="scrollAreaWidgetContents_OtherData">
+          <property name="geometry">
+           <rect>
+            <x>0</x>
+            <y>0</y>
+            <width>662</width>
+            <height>449</height>
            </rect>
           </property>
          </widget>
