--- a/src/catalog_view_form.ui
+++ b/src/catalog_view_form.ui
@@ -17,20 +17,20 @@
    <locale language="English" country="UnitedStates"/>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0" colspan="4">
-    <widget class="QTableWidget" name="tableWidget"/>
-   </item>
-   <item row="0" column="2">
-    <widget class="QPushButton" name="pushButton_showDatasheet">
+   <item row="0" column="1">
+    <widget class="QPushButton" name="pushButton_Setting">
      <property name="text">
-      <string>Show Datasheet</string>
+      <string>Setting</string>
      </property>
     </widget>
+   </item>
+   <item row="1" column="0" colspan="5">
+    <widget class="QTableWidget" name="tableWidget"/>
    </item>
    <item row="0" column="0">
     <widget class="QComboBox" name="comboBox_Supplyer"/>
    </item>
-   <item row="0" column="1">
+   <item row="0" column="2">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -42,6 +42,13 @@
       </size>
      </property>
     </spacer>
+   </item>
+   <item row="0" column="3">
+    <widget class="QPushButton" name="pushButton_showDatasheet">
+     <property name="text">
+      <string>Show Datasheet</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
